Auto stash before merge of "dinhnt" and "origin/dinhnt"

--- a/AppMain/AppMain.csproj
+++ b/AppMain/AppMain.csproj
@@ -180,6 +180,7 @@
   <ItemGroup>
     <Compile Include="AppCode\DBHelper.cs" />
     <Compile Include="AppCode\WPFHelper.cs" />
+    <Compile Include="Converter.cs" />
     <Compile Include="DetailWindow.xaml.cs">
       <DependentUpon>DetailWindow.xaml</DependentUpon>
     </Compile>
